Fix contents not stretching to the bottom of the page

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html {
+    height: 100vh;
     font-size: 1rem;
     font-family: "Rubik", "Open Sans", sans-serif;
 }
